--- a/config.yml
+++ b/config.yml
@@ -20,7 +20,7 @@ charset: "UTF-8"
 
 #template: "simple"
 
- template: "template_toolkit"
+# template: "template_toolkit"
  engines:
    template:
      template_toolkit:
